Fix animation on MobileNav

--- a/components/MobileNavButton/MobileNav.module.scss
+++ b/components/MobileNavButton/MobileNav.module.scss
@@ -183,7 +183,7 @@
 
   &__Menu {
     position: fixed;
-    display: none;
+    // display: none;
     // top: calc(100vh + (16px + 15px + 55px));
     top: 0rem;
     right: 0rem;
@@ -205,6 +205,10 @@
       // opacity: 1;
       z-index: 1000;
       // outline: none;
+    }
+
+    &--Hide {
+      display: none;
     }
   }
 
